# vertebrae

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: add.rs  block.rs  blockers.rs  criterion_ref.rs  delete.rs  depend.rs  done.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  path.rs  ready.rs  ref.rs  refs.rs  reject.rs  review.rs  section.rs  sections.rs  show.rs  start.rs  step_done.rs  submit.rs  transition_to.rs  triage.rs  undepend.rs  unref.rs  unsection.rs  update.rs
crates/cli/src/output/: mod.rs
crates/cli/tests/: integration_tests.rs
crates/cli/tests/common/: mod.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  models.rs  schema.rs
crates/db/src/repository/: filter.rs  graph.rs  mod.rs  relationship.rs  task.rs  validation.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  data.rs  details.rs  error.rs  event.rs  lib.rs  main.rs  navigation.rs  timeline.rs  tree_view.rs  ui.rs
scripts/: backup-db.sh
skills/: add.md  blockers.md  delete.md  depend.md  list.md  next.md  plan.md  ready.md  ref.md  section.md  status.md  step-done.md  triage.md  update.md  vtb-show.md
src/: id.rs  main.rs
src/commands/: add.rs  block.rs  blockers.rs  delete.rs  depend.rs  done.rs  list.rs  mod.rs  path.rs  ref.rs  refs.rs  section.rs  sections.rs  show.rs  start.rs  step_done.rs  undepend.rs  unref.rs  unsection.rs  update.rs
src/db/: error.rs  mod.rs  models.rs  schema.rs
src/output/: mod.rs
