[package]
name = "vertebrae"
version = "0.1.0"
edition = "2024"
description = "A task management CLI tool"
license = "MIT"

[[bin]]
name = "vtb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
surrealdb = { version = "2", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
static_assertions = "1"

[dev-dependencies]
serde_json = "1"
