[workspace]
members = ["crates/db"]
resolver = "2"

[package]
name = "vertebrae"
version = "0.1.0"
edition = "2024"
description = "A task management CLI tool"
license = "MIT"

[[bin]]
name = "vtb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
surrealdb = { version = "2", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
static_assertions = "1"
sha2 = "0.10"
rand = "0.9"
vertebrae-db = { path = "crates/db" }

[dev-dependencies]
serde_json = "1"
