[package]
name = "vertebrae-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Vertebrae task management"
license = "MIT"

[[bin]]
name = "vtb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
surrealdb = { version = "2", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
rand = "0.9"
vertebrae-db = { path = "../db" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
serial_test = "3"
