[package]
name = "vertebrae-db"
version = "0.1.0"
edition = "2024"
description = "Database layer for Vertebrae task management"
license = "MIT"

[dependencies]
surrealdb = { version = "2", features = ["kv-rocksdb"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
static_assertions = "1"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
